fix:build.gradle test설정 수정하다