@@ -50,7 +50,13 @@ subprojects {
     }
 }
 
-
 tasks.named('test') {
     useJUnitPlatform()
+        testLogging {
+            events "passed", "skipped", "failed"
+            showStandardStreams = true
+    }
+    // 버전 업데이트 경고 로그 삭제를 위해 추가
+    jvmArgs += ["-XX:+EnableDynamicAgentLoading"]
+    systemProperty "spring.profiles.active", "local"
 }
